# TwitchSwitcher

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/twitchsw/: compiler.h  http.h  map.h  never-destroyed.h  refs.h  sceneitem.h  scenewatcher.h  string.h  twitchsw.h  webview.h  workerthread.h
src/: http.cpp  http.h  macros-impl.h  refs.h  sceneitem.cpp  sceneitem.h  scenewatcher-impl.h  scenewatcher.cpp  scenewatcher.h  string-impl.cpp  string-impl.h  string.cpp  string.h  twitchsw.cpp  twitchsw.h  webview.cpp  workerthread-impl.h  workerthread.cpp  workerthread.h
src/mac/: WebViewController.h  WebViewController.mm  webview-wkwebview.h  webview-wkwebview.mm
src/windows/: CDispatch.cpp  CDispatch.h  CDocHostShowUI.cpp  CDocHostShowUI.h  CDocHostUIHandler.cpp  CDocHostUIHandler.h  COM.h  COleClientSite.cpp  COleClientSite.h  COleInPlaceFrame.cpp  COleInPlaceFrame.h  COleInPlaceSite.cpp  COleInPlaceSite.h  webview-windows.cpp  webview-windows.h
test/: CMakeLists.txt  macro_unittests.cpp
tools/: update-dependencies.bat  update-dependencies.sh
